# limo_robot_dev

./: .gitignore  README.md
ros2_ws/src/cv_package/: package.xml  setup.py
ros2_ws/src/cv_package/cv_package/: bev.py  boundary_extractor.py  lane_detector.py
ros2_ws/src/cv_package/discarded_scripts/: mapper.py  mapper_final.py  pen.py
ros2_ws/src/cv_package/launch/: cv.launch.py
ros2_ws/src/limo_controller/: package.xml  setup.cfg  setup.py
ros2_ws/src/limo_controller/limo_controller/: controller_trajectory.py
ros2_ws/src/limo_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/limo_interfaces/action/: FollowSequencePlan.action  Mission.action
ros2_ws/src/limo_interfaces/srv/: GenerateControlPlot.srv  GetSequencePlan.srv
ros2_ws/src/limo_rviz/: package.xml  setup.cfg  setup.py
ros2_ws/src/limo_rviz/launch/: limo_rviz.launch.py  limo_tf.launch.py
ros2_ws/src/map_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/map_package/config/: ekf_localization.yaml
ros2_ws/src/ros2_maps/: limo_map.pgm  limo_map.yaml
ros2_ws/src/traj_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/user_package/: package.xml  setup.cfg  setup.py
ros2_ws/useful_scripts/: dynamics4matlab_planar.txt  dynamics_calculator.py
ros2_ws/useful_scripts/Presentation scripts/: ai_pipeline.py
ros2_ws/useful_scripts/detection-lines/: README.roboflow.txt  data.yaml  decoupe_vid.py  export2ros.py  separate_dataset.py  train.py
ros2_ws/useful_scripts/detection-panneau/: app.py  decoupe_vid.py  download_data.py  main.py  test.py  test_video.py  train.py
(+353 files in other folders)
